fixed alignment

--- a/src/components/PropertyDealCard/PropertyDealCard.css
+++ b/src/components/PropertyDealCard/PropertyDealCard.css
@@ -1,5 +1,5 @@
 .card-container{
-    height: 700px;
+    height: 100%;
 }
 
 .image-container{
